added css and unit tests

--- a/wishlist/travel_wishlist/templates/travel_wishlist/wishlist.html
+++ b/wishlist/travel_wishlist/templates/travel_wishlist/wishlist.html
@@ -1,19 +1,22 @@
+{% extends 'travel_wishlist/base.html' %}
+{% block content %}
+
 <h2>Travel Wishlist</h2>
 
-<form method="post" action="{% url 'place_list' %}">
+<form method="POST" action="{% url 'place_list' %}">
     {% csrf_token %}
     {{ new_place_form }}
-    <button type="submit">Add</button>
+    <button id="add-new-place" type="submit">Add</button>
 </form>
 
 
 {% for place in places %}  <!--template tag - loops over list of unvisited Place objects-->
 
-<div>
+<div class="wishlist-place">
 
-    {{ place.name }}
+    <span class="place-name">{{ place.name }}</span>
 
-    <form method="POST" action="{%  url 'place_was_visited' place.pk %}">
+    <form class="visited-form" method="POST" action="{%  url 'place_was_visited' place.pk %}">
         {% csrf_token %}
         <button>Visited!</button>
     </form>
@@ -26,4 +29,4 @@
 
 {% endfor %}
 
-<a href="{% url 'places_visited' %}">Places you've visited</a>  <!--link to visited page-->
+{% endblock %}
