added more place detail fields, user accounts, place details page, styles, and deleting a place

--- a/wishlist/travel_wishlist/templates/travel_wishlist/visited.html
+++ b/wishlist/travel_wishlist/templates/travel_wishlist/visited.html
@@ -9,7 +9,11 @@
 <ul>
 
     {% for place in visited %}  <!--template tag - loops over list of visited Place objects-->
-        <li>{{ place.name }}</li>
+        <li>
+            <a href="{% url 'place_details' place.pk %}">
+                {{ place.name }}
+            </a>
+        </li>
     {% endfor %}
 
 </ul>
