--- a/wishlist/travel_wishlist/templates/travel_wishlist/base.html
+++ b/wishlist/travel_wishlist/templates/travel_wishlist/base.html
@@ -12,7 +12,7 @@
 
     <body>
 
-            <h1>Travel Wishlist</h1>
+            <h1 id="site-header">Travel Wishlist</h1>
 
                 {% block content %}
                 {% endblock %}
